wordpress-mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
        name: wordpress-stack
---
apiVersion: v1
kind: Service
metadata:
   name: mysql-service
   namespace: wordpress-stack
   labels:
     app.k8s.io/name: mysql
spec:
   selector:
     app.k8s.io/name: mysql
   ports:
     - port: 3306
       targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
     name: mysql
     namespace: wordpress-stack
spec:
     selector:
       app.k8s.io/name: mysql
     ports:
      - port: 3306
     clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
        name: wordpress
        namespace: wordpress-stack
        labels:
          app.k8s.io/name: wordpress
spec:
        type: NodePort
        selector:
          app.k8s.io/name: wordpress
        ports:
        - protocol: TCP
          port: 80
          nodePort: 30005
          targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
        name: wordpress
        namespace: wordpress-stack
        labels:
          app.k8s.io/name: wordpress
spec:
        replicas: 1
        selector:
           matchLabels:
             app.k8s.io/name: wordpress
        template:
           metadata:
             labels:
               app.k8s.io/name: wordpress
           spec:
             containers:
             - image: wordpress:5
               name: wordpress
               ports:
               - containerPort: 80
                 name: wordpress
               volumeMounts:
                 - name: mydata
                   mountPath: /var/www/html
             nodeName: node1
             volumes:
              - name: mydata
                persistentVolumeClaim:
                    claimName: mydata
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
        name: mysql
        namespace: wordpress-stack
        labels:
           app.k8s.io/name: mysql
spec:
        replicas: 1
        selector:
          matchLabels:
           app.k8s.io/name: mysql
        serviceName: mysql
        template:
          metadata:
            labels:
              app.k8s.io/name: mysql
          spec:
            containers:
            - image: mysql:5.7
              name: mysql
              ports:
              - containerPort: 3306
                name: mysql
              volumeMounts:
                - name: mysqlstorage
                  mountPath: /var/lib/mysql
            nodeName: node1
            volumes:
              - name: mysqlstorage
                persistentVolumeClaim:
                    claimName: mysqlstorage
